--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 
     <build>
         <plugins>
+            <!-- Plugin para la compilación del código -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -53,10 +54,23 @@
                 </configuration>
             </plugin>
 
+            <!-- Plugin para ejecutar pruebas (maven-surefire-plugin) -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M8</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.junit.platform</groupId>
+                        <artifactId>junit-platform-surefire-provider</artifactId>
+                        <version>1.1.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.sonarsource.sonarqube</groupId>
+                        <artifactId>sonar-plugin-api</artifactId>
+                        <version>8.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
